# TheoryOfAnythingTranscripts

./: .gitignore  AGENTS.md  Gemfile  README.md  _config.yml  index.md  pyproject.toml
_includes/: footer_custom.html  header_custom.html
episodes/: 2020-02-29-episode-1-we-don-t-need-no-stinkin-experts.md  2020-04-21-episode-2-is-the-scientific-method-wrong.md  2020-04-30-episode-3-the-popper-deutsch-solution.md  2020-05-09-episode-4-what-makes-a-good-explanation.md  2020-06-22-episode-5-the-avengers-time-travel-and-the-deutsch-proposition.md  2020-06-29-episode-6-dancing-the-ancient-forms.md  2020-07-05-episode-7-lies-damn-lies-and-statistics.md  2020-10-11-episode-8-the-disneyfication-of-star-wars.md  2020-12-13-episode-9-introduction-to-computational-theory.md  2020-12-20-episode-10-what-use-is-computational-theory.md  2020-12-27-episode-11-the-turing-principle-and-artificial-general-intelligence.md  2021-01-03-episode-12-artificial-intelligence-vs-artificial-general-intelligence.md  2021-01-10-episode-13-objections-to-artificial-general-intelligence.md  2021-01-11-special-edition-theory-of-anything-hosts-david-deutsch.md  2021-01-17-episode-14-theories-of-artificial-general-intelligence.md  2021-02-01-episode-15-radical-candor-giving-criticism-in-a-business-environment.md  2021-02-15-episode-16-radical-candor-how-to-give-effective-criticism.md  2021-03-01-episode-17-shiri-s-scissor-polarization-and-politics.md  2021-03-15-episode-18-idea-development-through-error-correction.md  2021-04-01-episode-19-why-don-t-businesses-emphasize-error-correction.md  (+117 more)
(+14 files in other folders)
